# protomcp

./: .gitignore  .goreleaser.yml  LICENSE  Makefile  README.md  go.mod  go.sum  go.work
.github/workflows/: ci.yml  pages.yml  release.yml
cmd/protomcp/: main.go
docs/: astro.config.mjs  feature-roadmap.md  package-lock.json  package.json
docs/.astro/: content-modules.mjs  data-store.json  settings.json
docs/plans/: harness-ml-migration.md
examples/: README.md  run-demo.sh
examples/go/: basic.go  full_showcase.go  real_world.go  tool_groups.go
examples/python/: advanced_server.py  basic.py  full_showcase.py  real_world.py  requirements.txt  resources_and_prompts.py  tool_groups.py  workflow_deploy.py
examples/typescript/: basic.ts  full-showcase.ts  package.json  real-world.ts  resources_and_prompts.ts  tool-groups.ts  tsconfig.json
internal/bridge/: bridge.go  bridge_test.go  prompts.go  resources.go  sampling.go  tools.go
internal/cancel/: tracker.go  tracker_test.go
internal/cli/: format.go  test.go
internal/config/: config.go  config_test.go
internal/envelope/: envelope.go  envelope_test.go
internal/mcp/: handler.go  handler_test.go  types.go
internal/middleware/: auth.go  auth_test.go  chain.go  chain_test.go  custom.go  custom_test.go  errors.go  errors_test.go  logging.go
internal/playground/: handlers.go  server.go  ws.go
internal/process/: manager.go  manager_test.go  stream_integration_test.go
internal/progress/: progress.go  progress_test.go
internal/reload/: watcher.go  watcher_test.go
internal/serverlog/: forwarder.go  forwarder_test.go
internal/tasks/: manager.go  manager_test.go
internal/testengine/: backend.go  engine.go  engine_test.go  trace.go  trace_test.go
internal/toollist/: manager.go  manager_test.go
internal/transport/: auth_inject_test.go  grpc.go  http.go  sse.go  stdio.go  stdio_test.go  transport.go  transport_test.go  ws.go
internal/validate/: validate.go  validate_test.go
proto/: protomcp.proto
sdk/go/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml
sdk/python/src/protomcp/: __init__.py  completion.py  context.py  discovery.py  group.py  local_middleware.py  log.py  manager.py  middleware.py  prompt.py  resource.py  result.py  runner.py  server_context.py  sidecar.py  telemetry.py  tool.py  transport.py  workflow.py
sdk/python/tests/: test_context.py  test_discovery.py  test_e2e.py  test_group.py  test_group_validation.py  test_local_middleware.py  test_log.py  test_manager.py  test_middleware.py  test_regression.py  test_result.py  test_round3_regression.py  test_schema_types.py  test_server_context.py  test_sidecar.py  test_telemetry.py  test_tool.py  test_tool_advanced.py  test_transport.py  test_workflow.py  test_workflow_visibility.py
sdk/rust/: Cargo.toml  README.md  build.rs
sdk/rust/proto/: protomcp.proto
sdk/rust/src/: completion.rs  context.rs  group.rs  lib.rs  local_middleware.rs  log.rs  manager.rs  middleware.rs  prompt.rs  resource.rs  result.rs  runner.rs  server_context.rs  sidecar.rs  telemetry.rs  tool.rs  transport.rs  workflow.rs
sdk/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
test/e2e/: e2e_test.go  helpers.go
tests/: README.md
tests/bench/: latency_bench_test.go  startup_bench_test.go  throughput_bench_test.go
tests/stress/: concurrent_calls_test.go  connection_chaos_test.go  (+3 more)
(+175 files in other folders)
