[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protomcp"
version = "0.1.0"
description = "Write MCP tools in Python. No MCP knowledge required."
requires-python = ">=3.10"
dependencies = [
    "protobuf>=4.0",
    "zstandard>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/protomcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/protomcp/protomcp_pb2.py" = "protomcp/protomcp_pb2.py"
