[package]
name = "protomcp"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for protomcp — write MCP tools in Rust"
license = "MIT"
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml"]

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.13"
