[package]
name = "protomcp"
version = "0.2.0"
edition = "2021"
description = "Rust SDK for protomcp — write MCP tools in Rust"
license = "MIT"
repository = "https://github.com/msilverblatt/protomcp"
homepage = "https://msilverblatt.github.io/protomcp/"
keywords = ["mcp", "ai", "tools", "protobuf"]
categories = ["api-bindings", "development-tools"]
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml"]

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"

[build-dependencies]
prost-build = "0.13"
